tests/ui/g-roleprogram-witness-mismatch.stderr
error[E0107]: struct takes 0 lifetime arguments but 1 lifetime argument was supplied
 --> tests/ui/g-roleprogram-witness-mismatch.rs:4:13
  |
4 |     let _ = RoleProgram::<'static, 0, ()> {
  |             ^^^^^^^^^^^   ------- help: remove the lifetime argument
  |             |
  |             expected 0 lifetime arguments
  |
note: struct defined here, with 0 lifetime parameters
 --> src/global/role_program.rs
  |
  | pub struct RoleProgram<const ROLE: u8> {
  |            ^^^^^^^^^^^

error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
 --> tests/ui/g-roleprogram-witness-mismatch.rs:4:13
  |
4 |     let _ = RoleProgram::<'static, 0, ()> {
  |             ^^^^^^^^^^^             ---- help: remove the unnecessary generic argument
  |             |
  |             expected 1 generic argument
  |
note: struct defined here, with 1 generic parameter: `ROLE`
 --> src/global/role_program.rs
  |
  | pub struct RoleProgram<const ROLE: u8> {
  |            ^^^^^^^^^^^ --------------

warning: unreachable expression
 --> tests/ui/g-roleprogram-witness-mismatch.rs:7:18
  |
6 |         _seal: todo!(),
  |                ------- any code following this expression is unreachable
7 |         summary: todo!(),
  |                  ^^^^^^^ unreachable expression
  |
  = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default
